SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/Exercise_Session__c.object-meta.xml
<CustomObject>
    <label>Exercise</label>
    <nameField>
        <displayFormat>ES-{0000000}</displayFormat>
        <label>Exercise Session Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exercises</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>