SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/Additional_Weight__c.field-meta.xml
<CustomField>
    <fullName>Additional_Weight__c</fullName>
    <inlineHelpText>Note: Filling &apos;Bar or Machine Weight&apos; will override &apos;Weight&apos; value above</inlineHelpText>
    <label>Bar or Machine Weight</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>