SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/Concentric__c.field-meta.xml
<CustomField>
    <fullName>Concentric__c</fullName>
    <inlineHelpText>how quickly you lift the weight</inlineHelpText>
    <label>Concentric</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>