SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/Day_of_Largest_1_Rep_Max__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Largest_1_Rep_Max__c</fullName>
    <label>Day of Largest 1 Rep Max</label>
    <type>Date</type>
</CustomField>