SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/Day_of_Workout__c.field-meta.xml
<CustomField>
    <fullName>Day_of_Workout__c</fullName>
    <formula>Workout__r.Day_of_Workout1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Day of Workout</label>
    <type>Date</type>
</CustomField>