SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/Doubler__c.field-meta.xml
<CustomField>
    <fullName>Doubler__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use this to double the value of &apos;Weight&apos;</inlineHelpText>
    <label>Doubler</label>
    <type>Checkbox</type>
</CustomField>