SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/eccentric__c.field-meta.xml
<CustomField>
    <fullName>eccentric__c</fullName>
    <inlineHelpText>how long it takes to lower the weight</inlineHelpText>
    <label>Eccentric</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>