SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/Largest_1_Rep_Max__c.field-meta.xml
<CustomField>
    <fullName>Largest_1_Rep_Max__c</fullName>
    <label>Largest 1 Rep Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>