SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/Medium_Plate_Value__c.field-meta.xml
<CustomField>
    <fullName>Medium_Plate_Value__c</fullName>
    <inlineHelpText>Note: Filling &apos;Medium Plate Value&apos; will override &apos;Weight&apos; value above</inlineHelpText>
    <label>Medium Plate Value</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>