SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/Medium_Plates_Count__c.field-meta.xml
<CustomField>
    <fullName>Medium_Plates_Count__c</fullName>
    <inlineHelpText>Note: Filling &apos;Medium Plate Count&apos; will override &apos;Weight&apos; value above</inlineHelpText>
    <label>Medium Plates Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>