SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/Pause_at_the_Bottom__c.field-meta.xml
<CustomField>
    <fullName>Pause_at_the_Bottom__c</fullName>
    <label>Pause at the Bottom</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>