SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/Reps__c.field-meta.xml
<CustomField>
    <fullName>Reps__c</fullName>
    <label>Reps</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>