SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/Rest__c.field-meta.xml
<CustomField>
    <fullName>Rest__c</fullName>
    <label>Rest</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>