SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/Workout__c.field-meta.xml
<CustomField>
    <fullName>Workout__c</fullName>
    <label>Workout</label>
    <referenceTo>Workout__c</referenceTo>
    <relationshipName>Exercise_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>