SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/fields/X1_Rep_Max__c.field-meta.xml
<CustomField>
    <fullName>X1_Rep_Max__c</fullName>
    <formula>Weight__c/(1.0278- 0.0278 * Reps__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>1 Rep Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>