SalesforceWorkoutLoggerApp/force-app/main/default/objects/Exercise_Session__c/validationRules/Exercise_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Exercise_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Exercise_Free_Form__c   &lt;&gt;  null, Exercise__c &lt;&gt; null)</errorConditionFormula>
    <errorDisplayField>Exercise__c</errorDisplayField>
    <errorMessage>Please Select a Exercise Type</errorMessage>
</ValidationRule>